--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,7 @@ on:
 
 jobs:
   build:
+    if: github.repository == 'Pwing-Minecraft/ItemAttributes'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
