--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,6 +13,9 @@ mythiclib = "1.6.2-SNAPSHOT"
 itemsadder = "3.6.1"
 nexo = "1.9.0"
 bstats-bukkit = "2.2.1"
+magic = "10.2"
+auraskills = "2.3.5"
+fabled = "1.0.4-R0.17-SNAPSHOT"
 
 [libraries]
 spigot-api = { group = "org.spigotmc", name = "spigot-api", version.ref = "spigot-api" }
@@ -29,3 +32,6 @@ mythiclib = { group = "io.lumine", name = "MythicLib-dist", version.ref = "mythi
 itemsadder = { group = "com.github.LoneDev6", name = "api-itemsadder", version.ref = "itemsadder" }
 nexo = { group = "com.nexomc", name = "nexo", version.ref = "nexo" }
 bstats-bukkit = { group = "org.bstats", name = "bstats-bukkit", version.ref = "bstats-bukkit" }
+magic = { group = "com.elmakers.mine.bukkit", name = "MagicAPI", version.ref = "magic" }
+auraskills = { group = "dev.aurelium", name = "auraskills-api-bukkit", version.ref = "auraskills" }
+fabled = { group = "studio.magemonkey", name = "fabled", version.ref = "fabled" }
